NetworkPolicy/kir_ns.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    site: kirthan
  name: kirthan
