NetworkPolicy/def_policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: def-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: default
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          site: nuthan
    - podSelector:
        matchLabels:
          app: nuthan
